--- a/src/_includes/partials/navbar.njk
+++ b/src/_includes/partials/navbar.njk
@@ -1,4 +1,4 @@
-<nav class="navbar shadow-lg sticky-top bg-body" id="navbar-main">
+<nav class="navbar sticky-top bg-body" id="navbar-main">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center gap-2" href="/">
       <img
